data/collection/fixes/descriptions/scala/dotty-1701
``` bash
$ scalac-2.12.0 t.scala
t.scala:2: error: not found: type test
  def test (x : test) : Int
                ^
one error found
$ 
$ dotc -version

Dotty compiler version 0.01 -- (c) 2013 LAMP/EPFL
$ 
$ dotc t.scala
Warning: mocking up superclass for module class test
$ 
$ cat t.scala
trait Foo {
  def test (x : test) : Int
} 
$ 
```